# VinsLearning

./: CMakeLists.txt  README.md  main.cpp
lecture1/: CMakeLists.txt  main.cpp
lecture2/lecture2_code/vio_data_simulation-master/main/: gener_alldata.cpp
lecture2/lecture2_code/vio_data_simulation-master/src/: imu.cpp
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/: CMakeLists.txt
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/: readme.md
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/code_utils/: CMakeLists.txt
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/code_utils/include/code_utils/cv_utils/dlt/: dlt.h
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/imu_utils/: CMakeLists.txt
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/imu_utils/data/: data_my_acc_x.txt  data_my_acc_y.txt  data_my_acc_z.txt  data_my_gyr_x.txt  data_my_gyr_y.txt  data_my_gyr_z.txt  data_my_sim_acc_x.txt  data_my_sim_acc_y.txt  data_my_sim_acc_z.txt  data_my_sim_gyr_t.txt  data_my_sim_gyr_x.txt  data_my_sim_gyr_y.txt  data_my_sim_gyr_z.txt  my_imu_param.yaml
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/imu_utils/launch/: my.launch
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/imu_utils/scripts/: draw_allan.m
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/kalibr_allan/: ReadMe.md
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/kalibr_allan/matlab/: SCRIPT_allan_matparallel.m  SCRIPT_process_results.m
lecture2/lecture2_code/vio_data_simulation-ros_version/catkin_ws/src/vio_sim/src/: gener_alldata.cpp  imu.cpp
lecture3/CurveFitting_LM/app/: CurveFitting.cpp
lecture3/CurveFitting_LM/backend/: problem.cc
lecture3/CurveFitting_LM/lambda/: lambda.txt
lecture5/BA_schur/BA_schur/app/: TestMonoBA.cpp
lecture5/BA_schur/BA_schur/backend/: edge.cc  edge_reprojection.cc  problem.cc
lecture6/course6_hw/: triangulate.cpp
lecture7/VINS-Course/: CMakeLists.txt
lecture7/VINS-Course/config/: cam_pose.txt  euroc_config.yaml
lecture7/VINS-Course/include/: feature_manager.h  feature_tracker.h
lecture7/VINS-Course/src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp
lecture7/VINS-Course/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp
lecture7/VINS-Course/test/: run_euroc.cpp
