cmake_minimum_required(VERSION 3.10)
project(untitled2)
#find_package(Threads REQUIRED)
set(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")
#SET(CMAKE_PREFIX_PATH "/opencv3.4.1/usr")
FIND_PACKAGE(OpenCV 3.4.1)
FIND_PACKAGE(Sophus)
# 添加Eigen头文件
include_directories( "/usr/include/eigen3" )
#INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Sophus_INCLUDE_DIRS})
add_executable(main main.cpp)
target_link_libraries(main ${Sophus_LIBRARIES})